# stepper-interpreter

./: README.md  keepitsimple.cabal  naming.hs  pattern-matching.hs  saved-evaluator.hs
src/: Evaluator.hs  Indexing.hs  Lift.hs  Ppr.hs  PrettyPrint.hs  THLibMapCopy.hs  Utils.hs
src/Demos/: Evaluator.hs  Matching.hs
src/Lift/: BiKey.hs  DataDeps.hs  DeepHoled.hs  DeepRecursive.hs  Lift.hs  Mutplate.hs
src/Lift/DeepHoled/: Instances.hs
src/Lift/DeepRecursive/: Instances.hs
src/Ppr/: Lib.hs  THLibMapCopy.hs
testing-snippets/: evaluation-sketch.hs  pattern-matching.hs
