cabal-version:      2.4
name:               keepitsimple
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dylan Thinnes
maintainer:         dylan.thinnes@protonmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Evaluator,
        Indexing,
        Lift,
        Ppr,
        Ppr.Lib,
        Ppr.THLibMapCopy

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.2.0,
        adjunctions,
        containers,
        data-fix,
        deriving-compat,
        distributive,
        lens,
        keys,
        pretty,
        recursion-schemes,
        template-haskell,
        ghc-boot-th

    hs-source-dirs:   src
    default-language: Haskell2010

executable keepitsimple
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.2.0,
        keepitsimple

    hs-source-dirs:   app
    default-language: Haskell2010
